wp-content/plugins/acf-form-blocks/blocks/form/style.css
/** Generic Form Styles **/
.acf-block-form input[type="text"],
.acf-block-form input[type="email"],
.acf-block-form input[type="tel"],
.acf-block-form input[type="url"],
.acf-block-form input[type="number"],
.acf-block-form input[type="password"],
.acf-block-form select,
.acf-block-form textarea {
	display: block;
	width: 100%;
	max-width: 100%;
	border: 1px solid #000;
	border-radius: 3px;
	padding: 0.5rem 0.75rem;
}

.acf-block-form .form-input > label,
.acf-block-form .form-fieldset > legend,
.acf-block-form .acf-block-radios .radios-label {
	display: flex;
	flex-wrap: wrap;
	gap: 0.25rem;
	width: 100%;
}

.acf-block-form label {
	cursor: pointer;
}
.acf-block-form label > *,
.acf-block-form legend > * {
	display: inline-block;
}
.acf-block-form .is-required {
	color: red;
}

.acf-block-form > .form-input + .form-input,
.acf-block-form > .form-input + .wp-block-group,
.acf-block-form > .form-input + .wp-block-columns,
.acf-block-form > .form-input + .acf-block-fieldset,
.acf-block-form > .acf-block-fieldset + .form-input,
.acf-block-form > .wp-block-group + .form-input,
.acf-block-form footer.form-submit {
	margin-block-start: 1.75em;
}

.acf-block-form > .wp-block-group > *,
.acf-block-form > .acf-block-fieldset > * {
	margin-block-start: 0.75rem;
}
.acf-block-form > .acf-block-fieldset > legend {
	margin-block-end: 0.75rem;
}

:where(body .is-layout-flow) > *[hidden]:first-child + * {
	margin-block-start: 0;
}

.acf-block-form .wp-block-columns:last-child {
	margin-bottom: 0;
}

.acf-form-blocks-validation {
	border: 1px solid red;
	background-color: rgba( 255, 0, 0, 0.1 );
	padding: 1em;
	margin: 1.75em 0;
}

